--- a/android/assets/localization/Level1_ru.properties
+++ b/android/assets/localization/Level1_ru.properties
@@ -1,8 +1,7 @@
-fire_enabled=Командир, орудие исправно !
-charge1=Но есть и хорошая новость ! ИИ научился 
-charge2=перезаряжать щиты корабля собранной от взрывов энергией
-charge3=Для перезарядки щитов нажмите на иконку щита 
-fire_disabled1=Командир, плохая новость.
-fire_disabled2=Астероид повредил пушку,нужно время на ремонт.
-fire_disabled3=Уклоняйтесь от астероидов ...
-
+fire_enabled=РљРѕРјР°РЅРґРёСЂ, РѕСЂСѓРґРёРµ РёСЃРїСЂР°РІРЅРѕ !
+charge1=РќРѕ РµСЃС‚СЊ Рё С…РѕСЂРѕС€Р°СЏ РЅРѕРІРѕСЃС‚СЊ ! РР РЅР°СѓС‡РёР»СЃСЏ 
+charge2=РїРµСЂРµР·Р°СЂСЏР¶Р°С‚СЊ С‰РёС‚С‹ РєРѕСЂР°Р±Р»СЏ СЃРѕР±СЂР°РЅРЅРѕР№ РѕС‚ РІР·СЂС‹РІРѕРІ СЌРЅРµСЂРіРёРµР№
+charge3=Р”Р»СЏ РїРµСЂРµР·Р°СЂСЏРґРєРё С‰РёС‚РѕРІ РЅР°Р¶РјРёС‚Рµ РЅР° РёРєРѕРЅРєСѓ С‰РёС‚Р° 
+fire_disabled1=РљРѕРјР°РЅРґРёСЂ, РїР»РѕС…Р°СЏ РЅРѕРІРѕСЃС‚СЊ.
+fire_disabled2=РђСЃС‚РµСЂРѕРёРґ РїРѕРІСЂРµРґРёР» РїСѓС€РєСѓ,РЅСѓР¶РЅРѕ РІСЂРµРјСЏ РЅР° СЂРµРјРѕРЅС‚.
+fire_disabled3=РЈРєР»РѕРЅСЏР№С‚РµСЃСЊ РѕС‚ Р°СЃС‚РµСЂРѕРёРґРѕРІ ...
