fix result refactoring

--- a/android/assets/localization/Level1_en.properties
+++ b/android/assets/localization/Level1_en.properties
@@ -5,4 +5,14 @@ charge3=To recharge the shields, click on the shield icon
 fire_disabled1=Commander, bad news.
 fire_disabled2=The asteroid damaged the gun, it takes time to repair.
 fire_disabled3=Shy away from asteroids ...
-
+start_1=Commander, we welcome you aboard the ship! 
+start_2=Received information from the command center:
+start_3=- you need to break through the field of asteroids.
+conf_touch_1=Control keys: pause - pause button
+conf_touch_2=motion - move your finger across the screen
+conf_touch_3=shooting - touch the screen
+conf_touch_4=press the pause button when you are ready
+conf_key_1=Control keys: pause - P or ESC
+conf_key_2=traffic - ADSW or arrows
+conf_key_3=shooting - space or mouse button
+conf_key_4=press P when you're ready ...
